add get other user's info
