# imServer/account/urls.py
@@ -7,5 +7,6 @@ urlpatterns = [
     path('login', views.login, name='login'),
     path('logout', views.logout, name='logout'),
     path('info', views.info, name='info'),
+    path('info/<str:t_username>', views.othersInfo, name='othersInfo'),
     path('password', views.changePassword, name='cPassword'),
 ]
